# biohazard-tools

./: .gitignore  LICENSE  README.md  Setup.hs  biohazard-tools.cabal  run_tests.sh  stack.yaml
data/: index_db.json
man/man1/: bam-fixpair.1  bam-mangle.1  bam-meld.1  bam-rewrap.1  bam-rmdup.1  expound.1  fastq2bam.1
src/: Diet.hs  FormattedIO.hs  Hg18.hs  Network.hs  PriorityQueue.hs  Symtab.hs  bam-fixpair.hs  bam-mangle.hs  bam-meld.hs  bam-resample.hs  bam-rewrap.hs  bam-rmdup.hs  bam-sort.hs  bam-trim.hs  diet.c  expound.hs  fastq2bam.hs
src/withJudy/: Diet.hs
src/withoutJudy/: Diet.hs
