Name:                biohazard-tools
Version:             0.2
Synopsis:            bioinformatics tools that work with bam files
Description:         A number of command line tools for manipulating bam
                     files.
Category:            Bioinformatics

Homepage:            https://bitbucket.org/ustenzel/biohazard-tools
License:             BSD3
License-File:        LICENSE

Author:              Udo Stenzel
Maintainer:          udo.stenzel@eva.mpg.de
Copyright:           (C) 2010-2017 Udo Stenzel

Extra-Source-Files:  man/man1/bam-fixpair.1
                     man/man1/bam-mangle.1
                     man/man1/bam-meld.1
                     man/man1/bam-rewrap.1
                     man/man1/bam-rmdup.1
                     man/man1/fastq2bam.1

Data-Files:          index_db.json
Data-Dir:            data

Cabal-version:       >= 1.10
Build-type:          Custom
Tested-With:         GHC == 7.8.4, GHC == 7.10.1, GHC == 8.0.1

source-repository head
  type:     git
  location: https://bitbucket.org/ustenzel/biohazard-tools.git


Executable bam-fixpair
  Main-is:             bam-fixpair.hs
  Ghc-options:         -Wall -rtsopts -optl-static -optl-pthread
  -- Ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  Default-Language:    Haskell2010
  Default-Extensions:  NoImplicitPrelude, OverloadedStrings,
                       BangPatterns, RecordWildCards, FlexibleContexts
  Hs-Source-Dirs:      src
  Other-modules:       Paths_biohazard_tools
  Build-depends:       async                    >= 2.0 && < 2.2,
                       base                     >= 4.6 && < 4.10,
                       binary                   >= 0.7 && < 0.9,
                       biohazard                >= 0.6.14 && < 0.7,
                       bytestring               >= 0.10.2 && < 0.11,
                       process                  >= 1.0 && < 1.5,
                       stm                      == 2.4.*,
                       transformers             >= 0.4.1 && < 0.6,
                       unix                     >= 2.5 && < 2.8,
                       vector                   == 0.11.*

Executable bam-mangle
  Main-is:             bam-mangle.hs
  Ghc-options:         -Wall -rtsopts -optl-static -optl-pthread
  -- Ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  Default-Language:    Haskell2010
  Default-Extensions:  NoImplicitPrelude, OverloadedStrings, BangPatterns
  Hs-Source-Dirs:      src
  Other-modules:       Paths_biohazard_tools
  Build-depends:       base                     >= 4.6 && < 4.10,
                       biohazard                >= 0.6.14 && < 0.7,
                       bytestring               >= 0.10.2 && < 0.11,
                       parsec                   == 3.*,
                       random                   >= 1.0 && < 1.2,
                       regex-posix              >= 0.90 && < 1.0,
                       transformers             >= 0.4.1 && < 0.6,
                       unordered-containers     >= 0.2.3 && < 0.3,
                       vector                   == 0.11.*

Executable bam-meld
  Main-is:             bam-meld.hs
  Ghc-options:         -Wall -rtsopts -optl-static -optl-pthread
  -- Ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  Default-Language:    Haskell2010
  Default-Extensions:  NoImplicitPrelude, OverloadedStrings,
                       BangPatterns, FlexibleContexts
  Hs-Source-Dirs:      src
  Other-modules:       Paths_biohazard_tools
  Build-depends:       base                     >= 4.6 && < 4.10,
                       biohazard                >= 0.6.14 && < 0.7,
                       bytestring               >= 0.10.2 && < 0.11,
                       containers               >= 0.4.1 && < 0.6

Executable bam-resample
  Main-is:             bam-resample.hs
  Ghc-options:         -Wall -rtsopts -optl-static -optl-pthread
  -- Ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  Default-Language:    Haskell2010
  Default-Extensions:  NoImplicitPrelude, OverloadedStrings, BangPatterns
  Hs-Source-Dirs:      src
  Other-modules:       Paths_biohazard_tools
  Build-depends:       base                     >= 4.6 && < 4.10,
                       biohazard                >= 0.6.14 && < 0.7,
                       bytestring               >= 0.10.2 && < 0.11,
                       random                   >= 1.0 && < 1.2

Executable bam-rewrap
  Main-is:             bam-rewrap.hs
  Ghc-options:         -Wall -rtsopts -optl-static -optl-pthread
  -- Ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  Default-Language:    Haskell2010
  Default-Extensions:  NoImplicitPrelude, OverloadedStrings, BangPatterns
  Hs-Source-Dirs:      src
  Other-modules:       Paths_biohazard_tools
  Build-depends:       base                     >= 4.6 && < 4.10,
                       biohazard                >= 0.6.14 && < 0.7,
                       bytestring               >= 0.10.2 && < 0.11,
                       containers               >= 0.4.1 && < 0.6

Executable bam-rmdup
  Main-is:             bam-rmdup.hs
  Ghc-options:         -Wall -rtsopts -optl-static -optl-pthread
  -- Ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  Default-Language:    Haskell2010
  Default-Extensions:  NoImplicitPrelude, OverloadedStrings,
                       BangPatterns, RecordWildCards, FlexibleContexts
  Hs-Source-Dirs:      src
  Other-modules:       Paths_biohazard_tools
  Build-depends:       base                     >= 4.6 && < 4.10,
                       biohazard                >= 0.6.14 && < 0.7,
                       bytestring               >= 0.10.2 && < 0.11,
                       containers               >= 0.4.1 && < 0.6,
                       unordered-containers     >= 0.2.3 && < 0.3,
                       vector                   == 0.11.*

Executable bam-trim
  Main-is:             bam-trim.hs
  Ghc-options:         -Wall -rtsopts -optl-static -optl-pthread
  -- Ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  Default-Language:    Haskell2010
  Default-Extensions:  NoImplicitPrelude, OverloadedStrings, BangPatterns
  Hs-Source-Dirs:      src
  Other-modules:       Paths_biohazard_tools
  Build-depends:       base                     >= 4.6 && < 4.10,
                       biohazard                >= 0.6.14 && < 0.7,
                       bytestring               >= 0.10.2 && < 0.11

Executable fastq2bam
  Main-is:             fastq2bam.hs
  Ghc-options:         -Wall -rtsopts -optl-static -optl-pthread
  -- Ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  Default-Language:    Haskell2010
  Default-Extensions:  NoImplicitPrelude, OverloadedStrings, BangPatterns
  Hs-Source-Dirs:      src
  Other-modules:       Paths_biohazard_tools
  Build-depends:       base                     >= 4.6 && < 4.10,
                       biohazard                >= 0.6.14 && < 0.7,
                       bytestring               >= 0.10.2 && < 0.11,
                       containers               >= 0.4.1 && < 0.6,
                       vector                   == 0.11.*

-- :vim:tw=132:
