Name:                biohazard-tools
Version:             0.2
Synopsis:            bioinformatics tools that work with bam files
Description:         A number of command line tools for manipulating bam
                     files.
Category:            Bioinformatics

Homepage:            https://bitbucket.org/ustenzel/biohazard-tools
License:             BSD3
License-file:        LICENSE

Author:              Udo Stenzel
Maintainer:          udo.stenzel@eva.mpg.de
Copyright:           (C) 2010-2017 Udo Stenzel

Extra-source-files:  man/man1/bam-fixpair.1
                     man/man1/bam-mangle.1
                     man/man1/bam-meld.1
                     man/man1/bam-rewrap.1
                     man/man1/bam-rmdup.1
                     man/man1/fastq2bam.1

Cabal-version:       >= 1.10
Build-type:          Custom
Tested-with:         GHC == 7.8.4, GHC == 7.10.3, GHC == 8.0.2, GHC == 8.2.1

source-repository head
  type:     git
  location: https://bitbucket.org/ustenzel/biohazard-tools.git


Test-suite bam-sort
  Type:                exitcode-stdio-1.0
  Main-is:             bam-sort.hs
  Ghc-options:         -Wall -rtsopts
  Default-Language:    Haskell2010
  Default-Extensions:  NoImplicitPrelude, OverloadedStrings,
                       BangPatterns, RecordWildCards, FlexibleContexts
  Other-Extensions:    CPP, Rank2Types
  Hs-Source-Dirs:      src
  Other-modules:       Paths_biohazard_tools, PriorityQueue
  Include-dirs:        cbits
  C-sources:           cbits/lz4.c
  Build-depends:       base                     >= 4.6 && < 4.11,
                       binary                   >= 0.8.3 && < 0.9,
                       biohazard                >= 0.6.15 && < 0.7,
                       bytestring               >= 0.10.2 && < 0.11,
                       unix                     >= 2.5 && < 2.8

Executable bam-fixpair
  Main-is:             bam-fixpair.hs
  Ghc-options:         -Wall -rtsopts
  Default-Language:    Haskell2010
  Default-Extensions:  NoImplicitPrelude, OverloadedStrings,
                       BangPatterns, RecordWildCards, FlexibleContexts
  Other-Extensions:    CPP, Rank2Types
  Hs-Source-Dirs:      src
  Other-modules:       Paths_biohazard_tools, PriorityQueue
  Include-dirs:        cbits
  C-sources:           cbits/lz4.c
  Build-depends:       async                    >= 2.0 && < 2.2,
                       base                     >= 4.6 && < 4.11,
                       binary                   >= 0.8.3 && < 0.9,
                       biohazard                >= 0.6.15 && < 0.7,
                       bytestring               >= 0.10.2 && < 0.11,
                       process                  >= 1.0 && < 1.7,
                       stm                      == 2.4.*,
                       unix                     >= 2.5 && < 2.8,
                       vector                   >= 0.11 && < 0.13

Executable bam-mangle
  Main-is:             bam-mangle.hs
  Ghc-options:         -Wall -rtsopts
  Default-Language:    Haskell2010
  Default-Extensions:  NoImplicitPrelude, OverloadedStrings, BangPatterns
  Hs-Source-Dirs:      src
  Other-modules:       Paths_biohazard_tools
  Build-depends:       base                     >= 4.6 && < 4.11,
                       biohazard                >= 0.6.15 && < 0.7,
                       bytestring               >= 0.10.2 && < 0.11,
                       parsec                   == 3.*,
                       random                   >= 1.0 && < 1.2,
                       regex-posix              >= 0.90 && < 1.0,
                       transformers             >= 0.4.1 && < 0.6,
                       unordered-containers     >= 0.2.3 && < 0.3,
                       vector                   >= 0.11 && < 0.13

Executable bam-meld
  Main-is:             bam-meld.hs
  Ghc-options:         -Wall -rtsopts
  Default-Language:    Haskell2010
  Default-Extensions:  NoImplicitPrelude, OverloadedStrings,
                       BangPatterns, FlexibleContexts
  Hs-Source-Dirs:      src
  Other-modules:       Paths_biohazard_tools
  Build-depends:       base                     >= 4.6 && < 4.11,
                       biohazard                >= 0.6.15 && < 0.7,
                       bytestring               >= 0.10.2 && < 0.11,
                       containers               >= 0.4.1 && < 0.6

Executable bam-resample
  Main-is:             bam-resample.hs
  Ghc-options:         -Wall -rtsopts
  Default-Language:    Haskell2010
  Default-Extensions:  NoImplicitPrelude, OverloadedStrings, BangPatterns
  Hs-Source-Dirs:      src
  Other-modules:       Paths_biohazard_tools
  Build-depends:       base                     >= 4.6 && < 4.11,
                       biohazard                >= 0.6.15 && < 0.7,
                       bytestring               >= 0.10.2 && < 0.11,
                       random                   >= 1.0 && < 1.2

Executable bam-rewrap
  Main-is:             bam-rewrap.hs
  Ghc-options:         -Wall -rtsopts
  Default-Language:    Haskell2010
  Default-Extensions:  NoImplicitPrelude, OverloadedStrings, BangPatterns
  Hs-Source-Dirs:      src
  Other-modules:       Paths_biohazard_tools
  Build-depends:       base                     >= 4.6 && < 4.11,
                       biohazard                >= 0.6.15 && < 0.7,
                       bytestring               >= 0.10.2 && < 0.11,
                       containers               >= 0.4.1 && < 0.6

Executable bam-rmdup
  Main-is:             bam-rmdup.hs
  Ghc-options:         -Wall -rtsopts
  Default-Language:    Haskell2010
  Default-Extensions:  NoImplicitPrelude, OverloadedStrings,
                       BangPatterns, RecordWildCards, FlexibleContexts
  Hs-Source-Dirs:      src
  Other-modules:       Paths_biohazard_tools, PriorityQueue
  Include-dirs:        cbits
  C-sources:           cbits/lz4.c
  Build-depends:       base                     >= 4.6 && < 4.11,
                       binary                   >= 0.8.3 && < 0.9,
                       biohazard                >= 0.6.15 && < 0.7,
                       bytestring               >= 0.10.2 && < 0.11,
                       containers               >= 0.4.1 && < 0.6,
                       unordered-containers     >= 0.2.3 && < 0.3,
                       vector                   >= 0.11 && < 0.13

Executable bam-trim
  Main-is:             bam-trim.hs
  Ghc-options:         -Wall -rtsopts
  Default-Language:    Haskell2010
  Default-Extensions:  NoImplicitPrelude, OverloadedStrings, BangPatterns
  Hs-Source-Dirs:      src
  Other-modules:       Paths_biohazard_tools
  Build-depends:       base                     >= 4.6 && < 4.11,
                       biohazard                >= 0.6.15 && < 0.7,
                       bytestring               >= 0.10.2 && < 0.11

Executable fastq2bam
  Main-is:             fastq2bam.hs
  Ghc-options:         -Wall -rtsopts
  Default-Language:    Haskell2010
  Default-Extensions:  NoImplicitPrelude, OverloadedStrings, BangPatterns
  Hs-Source-Dirs:      src
  Other-modules:       Paths_biohazard_tools
  Build-depends:       base                     >= 4.6 && < 4.11,
                       biohazard                >= 0.6.15 && < 0.7,
                       bytestring               >= 0.10.2 && < 0.11,
                       containers               >= 0.4.1 && < 0.6,
                       vector                   >= 0.11 && < 0.13

-- :vim:tw=132:
